--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.460.1",
+		"paneforge": "^0.0.6",
 		"svelte": "^5.0.0-next.197",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.3.0",
