--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "concurrently -n \"FRONT,BACK\" -c \"green,blue\" --kill-others \"npm run frontend\" \"npm run backend\"",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"frontend": "vite dev",
+		"backend": "cd backend && node index.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -26,6 +28,7 @@
 		"@codemirror/basic-setup": "^0.20.0",
 		"@codemirror/lang-javascript": "^6.2.2",
 		"@tailwindcss/typography": "^0.5.15",
+		"concurrently": "^9.1.2",
 		"tailwindcss": "^3.4.14"
 	}
 }
