--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
-		"@codemirror/basic-setup": "^0.20.0",
-		"@codemirror/lang-javascript": "^6.2.2",
 		"@tailwindcss/typography": "^0.5.15",
+		"codemirror": "^6.0.1",
 		"concurrently": "^9.1.2",
 		"tailwindcss": "^3.4.14"
 	}
