--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"codemirror": "^6.0.1",
 		"concurrently": "^9.1.2",
+		"dotenv": "^16.4.7",
+		"firebase": "^11.4.0",
 		"tailwindcss": "^3.4.14"
 	}
 }
