--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
 		"firebase": "^11.4.0",
+		"mode-watcher": "^0.5.1",
 		"tailwindcss": "^3.4.14"
 	}
 }
