--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.22.0",
+		"bits-ui": "^1.3.19",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.460.1",
 		"paneforge": "^0.0.6",
-		"svelte": "^5.0.0-next.197",
+		"svelte": "^5.25.6",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
@@ -26,11 +26,17 @@
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.15",
+		"@tanstack/table-core": "^8.21.2",
 		"codemirror": "^6.0.1",
 		"concurrently": "^9.1.2",
 		"dotenv": "^16.4.7",
 		"firebase": "^11.4.0",
 		"mode-watcher": "^0.5.1",
+		"shadcn-svelte": "^0.14.0",
 		"tailwindcss": "^3.4.14"
+	},
+	"overrides": {
+		"cookie": "^0.7.0",
+		"esbuild": "^0.25.0"
 	}
 }
