--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"codemirror": "^6.0.1",
 		"concurrently": "^9.1.2",
+		"monaco-editor": "^0.52.2",
 		"tailwindcss": "^3.4.14"
 	}
 }
