--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tsconfig/svelte": "^5.0.4",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.3.19",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.460.1",
 		"paneforge": "^0.0.6",
-		"svelte": "^5.25.6",
+		"svelte": "^5.25.10",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
+		"typescript": "^5.8.3",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
