--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"backend": "cd backend && node index.js"
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.487.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
